--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/alexkwolfe/node-ad2usb.git"
+    "url": "https://github.com/alistairg/node-ad2usb.git#local"
   },
   "engines": {
     "node": "~0.10.0"
